fix: JDK17 adaptation - replace List.getFirst()/getLast() in SQLFunctionShortestPathTest
Follow-up to f7bede935 (backport of #4645): List.getFirst()/getLast() are
JDK21+ SequencedCollection methods, unavailable on java17 branch. Replaced
with list.get(0) / list.get(list.size() - 1).